added two additional endpoints that mirror the functionality of target notebook. Besides that added an new endpoint that returns parquets

--- a/notebooks/01_api_test.ipynb
+++ b/notebooks/01_api_test.ipynb
@@ -27,7 +27,7 @@
    "id": "832d5f6a",
    "metadata": {},
    "source": [
-    "Testing Base Endpoints for Plates and Slots"
+    "Testing Base Endpoints for Plates and Nuts"
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "39609aa3",
    "metadata": {},
    "outputs": [
@@ -234,18 +234,18 @@
     }
    ],
    "source": [
-    "def list_plate_slots_flat():\n",
-    "    r = requests.get(f\"{BASE_URL}/plate-slots\", timeout=30)\n",
+    "def list_plate_nuts_flat():\n",
+    "    r = requests.get(f\"{BASE_URL}/plate-nuts\", timeout=30)\n",
     "    r.raise_for_status()\n",
     "    return pd.DataFrame(r.json())\n",
     "\n",
-    "plates_and_slots = list_plate_slots_flat()\n",
-    "plates_and_slots"
+    "plates_and_nuts = list_plate_nuts_flat()\n",
+    "plates_and_nuts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ada06436",
    "metadata": {},
    "outputs": [
@@ -291,20 +291,20 @@
     }
    ],
    "source": [
-    "def load_slots_for_plate(platte: int):\n",
-    "    r = requests.get(f\"{BASE_URL}/plates/{platte}/slots\", timeout=30)\n",
+    "def load_nuts_for_plate(platte: int):\n",
+    "    r = requests.get(f\"{BASE_URL}/plates/{platte}/nuts\", timeout=30)\n",
     "    r.raise_for_status()\n",
     "    return r.json()\n",
     "\n",
     "platte = int(plates_df.iloc[5][\"platte\"])\n",
-    "slots = load_slots_for_plate(platte)\n",
+    "nuts = load_nuts_for_plate(platte)\n",
     "\n",
-    "platte, slots\n"
+    "platte, nuts\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a6835eec",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
     "\n",
     "    return df\n",
     "\n",
-    "nut = float(slots[3]) \n",
+    "nut = float(nuts[3]) \n",
     "platte = str(platte)\n",
     "df = load_data(platte, nut, limit=1000)\n",
     "df.head()\n"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9fbae10e",
    "metadata": {},
    "outputs": [
@@ -575,7 +575,7 @@
     "plt.scatter(plot_df[\"WCS_Y_mm\"], plot_df[\"Value\"], s=5)\n",
     "plt.xlabel(\"WCS_Y_mm\")\n",
     "plt.ylabel(\"Value\")\n",
-    "plt.title(f\"Platte {platte}, Nut {slots} (sample)\")\n",
+    "plt.title(f\"Platte {platte}, Nut {nuts} (sample)\")\n",
     "plt.show()\n"
    ]
   }
